@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	New features:
+	* Re-enabled rounded corners
+
+	Dependencies:
+	* Tickit 0.48+, for ->get_cell translation handling
 
 0.006     2015-01-24 14:00:26+00:00 Europe/London
 	New features:
